src/objects/VartopiaDRS__Registration__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Period_for_TV__c</fullName>
        <formula>IF( VartopiaDRS__Approved_Date__c =TODAY(),1, 
IF(VartopiaDRS__Approved_Date__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(VartopiaDRS__Approved_Date__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
IF(FLOOR(( 13 - IF( MONTH( VartopiaDRS__Approved_Date__c)=1, MONTH( VartopiaDRS__Approved_Date__c) + 12, MONTH( VartopiaDRS__Approved_Date__c))) / 3 )= FLOOR(( 13 - IF( MONTH( TODAY())=1, MONTH( TODAY()) + 12, MONTH( TODAY()))) / 3 ),4, 
5))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Date Period for TV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Unmapped__c</fullName>
        <formula>IF(VartopiaDRS__Opportunity__r.Name = &quot;Vartopia Default Opportunity&quot;,TODAY()-VartopiaDRS__Date_Submitted__c,NULL)</formula>
        <label>Days Unmapped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Joint/Accelerated</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to determine if a registration is forecasted to be won.</description>
        <label>Forecasted Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Registration__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (Registration)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_at_Approval__c</fullName>
        <label>Opportunity Stage at Approval</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Partner_Manager_Static__c</fullName>
        <description>Stamp of the original partner manager on the reg for credit tracking purposes</description>
        <label>Original Partner Manager (Static)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <label>Owner Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROP_Delivery_Date__c</fullName>
        <label>PROP Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Account__c</fullName>
        <formula>Partner_Manager__r.Full_Name__c  &amp;&quot; (&quot;&amp; VartopiaDRS__Customer__r.Name&amp;&quot;)&quot;</formula>
        <label>Partner Manager (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Name__c</fullName>
        <formula>Partner_Manager__r.Full_Name__c</formula>
        <label>Partner Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Note__c</fullName>
        <label>Partner Manager Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Region_Static__c</fullName>
        <formula>CASE( Partner_Manager_Role_Stamped__c,
&quot;Channel Manager - East&quot;, &quot;East&quot;,
&quot;Channel Manager - West&quot;, &quot;West&quot;,
&quot;Channel Manager - Central&quot;, &quot;Central&quot;,
&quot;Channel Manager - EMEA&quot;, &quot;EMEA&quot;,
&quot;Channel Manager - Federal Accounts&quot;, &quot;Federal&quot;,
&quot;Channel Regional Director - East&quot;, &quot;East&quot;,
&quot;Channel Regional Director - West&quot;, &quot;West&quot;,
&quot;Channel Regional Director - Central&quot;, &quot;Central&quot;,
&quot;Channel Regional Director - EMEA&quot;, &quot;EMEA&quot;,
&quot;Channel Regional Director - Federal Accounts&quot;,&quot;Federal&quot;,
&quot;Other&quot;)</formula>
        <label>Partner Manager Region (Static)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Role_Stamped__c</fullName>
        <label>Partner Manager Role (Static)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Role__c</fullName>
        <formula>Partner_Manager__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Manager Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Team__c</fullName>
        <formula>TEXT(Partner_Manager__r.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Manager Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager_Username__c</fullName>
        <formula>Partner_Manager__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Manager Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specific partner office (physical location) that the registration is coming from</description>
        <label>Partner Office</label>
        <referenceTo>Partner_Office__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_SE__c</fullName>
        <description>SE on the Partner Side</description>
        <label>Partner SE</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_non_Distributor__c</fullName>
        <label>Partner (non-Distributor)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pure_Promotion_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pure Promotion Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reg_Identified_By_Manual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Team Member who identified the Registration</description>
        <label>Reg Identified By (Manual)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Team__c</field>
                <operation>equals</operation>
                <value>Xccelerators</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reg_Identified_By_Static__c</fullName>
        <description>Partner Manager the Reg was Identified By</description>
        <label>Reg Identified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Report_Field__c</fullName>
        <description>Ben&apos;s Formula for Running RVP&apos;s Registration Reports</description>
        <formula>IF(AND(ISPICKVAL(VartopiaDRS__Vendor_Status__c, &quot;Submitted&quot;),CreatedDate &gt;= DATETIMEVALUE((TODAY() -14))), 1, 
IF(AND(ISPICKVAL(VartopiaDRS__Vendor_Status__c, &quot;Submitted&quot;),VartopiaDRS__Expiration_Date__c &lt;= (TODAY() +15)), 2, 
IF(OR(ISPICKVAL(VartopiaDRS__Vendor_Status__c, &quot;Approved&quot;),ISPICKVAL(VartopiaDRS__Vendor_Status__c, &quot;Closed-Won&quot;)), 3, 4 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Report Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Registration Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Audit__c</fullName>
        <label>Sales Ops Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Ops_Confirmation_Notes__c</fullName>
        <label>Sales Ops Confirmation Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Approved_by_Vartopia__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Registration has been approved by Vartopia.</inlineHelpText>
        <label>Approved by Vartopia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Campaign_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign 1</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Campaign_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign 2</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Registrations (Campaign 2)</relationshipLabel>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Campaign_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign 3</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Registrations (Campaign 3)</relationshipLabel>
        <relationshipName>Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Check_Box_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check_Box_1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Check_Box_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check_Box_2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Check_Box_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check_Box_3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Created_from_MVS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from MVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Currency_1__c</fullName>
        <label>Currency_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Currency_2__c</fullName>
        <label>Currency_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Currency_3__c</fullName>
        <label>Currency_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Account_OwnerId__c</fullName>
        <formula>VartopiaDRS__Customer__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_AddressLine1__c</fullName>
        <label>Customer AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_AddressLine2__c</fullName>
        <label>Customer AddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_City__c</fullName>
        <label>Customer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact_Email_New__c</fullName>
        <label>Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact_Email__c</fullName>
        <label>Customer Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact_First_Name__c</fullName>
        <label>Customer Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact_Last_Name__c</fullName>
        <label>Customer Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact_Phone__c</fullName>
        <label>Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Country__c</fullName>
        <label>Customer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_State__c</fullName>
        <label>Customer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer_Zip__c</fullName>
        <label>Customer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations (Customer Account)</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Date_1__c</fullName>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Date_2__c</fullName>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Date_3__c</fullName>
        <label>Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Deal_Name__c</fullName>
        <label>Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Denail_Resean_formula__c</fullName>
        <formula>TEXT(VartopiaDRS__Test_Field_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denail Resean formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn’t Meet Program Requirements</fullName>
                </value>
                <value>
                    <fullName>Duplicate Registration</fullName>
                </value>
                <value>
                    <fullName>Registered by Another Partner</fullName>
                </value>
                <value>
                    <fullName>Other – See Comment Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Distributor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations (Distributor Account)</relationshipLabel>
        <relationshipName>Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Domain__c</fullName>
        <formula>TRIM(SUBSTITUTE(VartopiaDRS__Customer_Contact_Email_New__c , LEFT(VartopiaDRS__Customer_Contact_Email_New__c, FIND(&quot;@&quot;,VartopiaDRS__Customer_Contact_Email_New__c)), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Email_1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Long_Text_Area_1__c</fullName>
        <label>Long Text Area 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Long_Text_Area_2__c</fullName>
        <label>Long Text Area 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Long_Text_Area_3__c</fullName>
        <label>Long Text Area 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Multi_Select_Picklist_10__c</fullName>
        <label>Multi-Select Picklist 10</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Multi_Select_Picklist_1__c</fullName>
        <label>Multi-Select Picklist 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Multi_Select_Picklist_2__c</fullName>
        <label>Multi-Select Picklist 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Number_1__c</fullName>
        <label>Number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Number_2__c</fullName>
        <label>Number 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Number_3__c</fullName>
        <label>Number 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Opportunity_OwnerId__c</fullName>
        <formula>VartopiaDRS__Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Opportunity_StageName__c</fullName>
        <formula>TEXT(VartopiaDRS__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_StageName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registrations (Partner Account)</relationshipLabel>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Percent_1__c</fullName>
        <label>Percent 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Percent_2__c</fullName>
        <label>Percent 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Percent_3__c</fullName>
        <label>Percent 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Picklist_10__c</fullName>
        <label>Picklist 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Picklist_11__c</fullName>
        <label>Picklist 11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Picklist_12__c</fullName>
        <label>Picklist 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Primary_Salesrep_Email_New__c</fullName>
        <label>Primary Salesrep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Primary_Salesrep_Email__c</fullName>
        <label>Primary Salesrep Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Primary_Salesrep_FirstName__c</fullName>
        <label>Primary Salesrep FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Primary_Salesrep_LastName__c</fullName>
        <label>Primary Salesrep LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Primary_Salesrep_Phone__c</fullName>
        <label>Primary Salesrep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Program_Name__c</fullName>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Reason_For_Denial__c</fullName>
        <label>Reason For Denial(Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Reg_Days_Since_Submitted__c</fullName>
        <formula>Today()- VartopiaDRS__Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg Days Since Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Registration_Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__SalesRep_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesRep Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (SalesRep Contact)</relationshipLabel>
        <relationshipName>Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Solution_Name__c</fullName>
        <label>Solution Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitted_By_Email_New__c</fullName>
        <label>Submitted By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitted_By_Email__c</fullName>
        <label>Submitted By Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitted_By_FirstName__c</fullName>
        <label>Submitted By FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitted_By_LastName__c</fullName>
        <label>Submitted By LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitted_By_PhoneNumber__c</fullName>
        <label>Submitted By PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Submitter_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations (Submitter Contact)</relationshipLabel>
        <relationshipName>Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Test_Field_1__c</fullName>
        <label>Test Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Test_Field_2__c</fullName>
        <label>Test Field 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VartopiaDRS__Test_Field_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Text10_255__c</fullName>
        <label>Text10(255)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Text11_255__c</fullName>
        <label>Text11(255)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Text12_255__c</fullName>
        <label>Text12(255)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__URL_1__c</fullName>
        <label>URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__URL_2__c</fullName>
        <label>URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__URL_3__c</fullName>
        <label>URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Vartopia_Registration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Vartopia Registration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Vendor_Approval_ID__c</fullName>
        <label>Vendor Approval ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Vendor_Deal_ID__c</fullName>
        <label>Vendor Deal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Closed-Won</fullName>
                </value>
                <value>
                    <fullName>Closed-Lost</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>Master</fullName>
        <columns>NAME</columns>
        <columns>VartopiaDRS__Date_Submitted__c</columns>
        <columns>VartopiaDRS__Customer_Name__c</columns>
        <columns>VartopiaDRS__Deal_Name__c</columns>
        <columns>VartopiaDRS__Expected_Revenue__c</columns>
        <columns>VartopiaDRS__Expected_Close_Date__c</columns>
        <columns>VartopiaDRS__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Master</label>
    </listViews>
</CustomObject>